# fangyu

./: .env.deploy.example  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  ROADMAP.md  __init__.py  __main__.py  build-native.bat  build-native.sh  dev-clean.bat  dev-clean.sh  dev-desktop.bat  dev-native.bat  dev-native.sh  dev-worker-tauri.bat  dev-worker-tray.bat  dev-worker.bat  dev-worker.sh  dev.bat  dev.sh  docker-compose.yml  hermes_agent_flow.json  hermes_agent_ideal.json  install-native.bat  install-native.sh  install-worker.bat  install-worker.sh  package-lock.json  package.json  pyproject.toml  server.py
a2a/: __init__.py  payload.py  protocol.py
adapters/: __init__.py  base.py  mqtt_client.py  mqtt_sim.py  opcua_sim.py  plc_sim.py  registry.py
backend/: .env.example  requirements.txt  run.py  seed1.json  seed2.json  test_approval.json  test_assertions.ps1  test_code_exec.json  test_condition.json  test_core.json  test_ext.json  test_hermes.json  test_knowledge.json  test_loop.json  test_memory.json  test_memory_extract.json  test_prompt.json  test_role.json  test_simple.json  test_switch.json  test_tool_call.json  test_tool_skill.json  test_trigger.json  test_var_text.json
core/: a2a_discovery.py  a2a_factories.py  action_loop.py  agent_bundle.py  agent_card.py  agent_factory.py  asset_seed.py  auth_gate.py  bundle_exe.py  collaboration.py  collaboration_store.py  config.py  constitution.py  credentials.py  exceptions.py  factory_eval.py  factory_heartbeat_loop.py  guardrails.py  harness_flow.py  intent_agents.py  intent_flow.py  llm_validator.py  materials.py  monitor_alerts.py  org_acl.py  platform_identity.py  presence_samples.py  pyinstaller_util.py  remote_hosts.py  scenario_templates.py  scope_resolver.py  setup_copilot.py  setup_worker.py  skill_pack.py  sso.py  topology_acl.py  topology_export.py  tracer.py  worker_mqtt_bridge.py  worker_registry.py  (+1 more)
data/: constitution.json  sso.json  worker-mqtt-triggers.example.json  worker-shell-policy.example.json
deploy/: nginx.conf
docs/: A2A_DISCOVERY.md  A2A_REMOTE.md  ADAPTER_DEV_GUIDE.md  AUTH_SSO.md  AUTONOMOUS_PLAN_2026-07-19.md  BROWSER_TOOL.md  DEMO_VERTICAL_SLICE.md  DEPLOY.md  DUAL_FACTORY_DUTY.md  ELECTRON_RETIREMENT.md  ELECTRON_SMOKE.md  FACTORY_EVAL.md  FACTORY_MATERIALS.md  FAILURE_MODES.md  FLOW_CONNECTION_RULES.md  FULL_EXPERIENCE.md  GRADUATION_EXPORTABLE_AGENT.md  HAPPY_PATH_ACCEPTANCE.md  IM_FEISHU.md  INTEGRATION_COOKBOOK.md  L1_ROADMAP.md  MCP_TASKS.md  OFFICE_ORCHESTRATE.md  OVERNIGHT_BACKLOG.md  PHASE5_TECH_SPEC.md  PLATFORM_COMPOSE_HARNESS.md  PRODUCT_MANUAL.md  PROJECT_ASSESSMENT.md  Q0_ROADMAP.md  Q1_ROADMAP.md  README.md  S0_ROADMAP.md  SECURITY_MODEL.md  TECH_RADAR_2026.md  TOPOLOGY_AND_TASK.md  USER_GUIDE.md  VALUE_AND_SIGNIFICANCE.md  VECTORSTORE.md  VISION_AND_PRODUCT.md
engine/: a2a_remote.py  a2a_runtime.py  acl_cli.py  agent_loop.py  approval_queue.py  browser_tool.py  bundle_a2a_client.py  bundle_chat.py  bundle_cli.py  bundle_daemon.py  bundle_mqtt_trigger.py  bundle_orchestrate.py  bundle_runtime.py  bundle_session.py  bundle_tools.py  context.py  embedding.py  exec_agent.py  exec_ai.py  llm.py  (+28 more)
fangyu/: __init__.py  __main__.py  pyproject.toml
fangyu-worker-tauri/src-tauri/: Cargo.toml  tauri.conf.json
fangyu-worker-tauri/src-tauri/capabilities/: default.json
fangyu-worker-tauri/src-tauri/icons/: icon.icns
fangyu-worker-tauri/src-tauri/permissions/: fangyu.toml
fangyu-worker-tauri/src-tauri/src/: lib.rs  main.rs
fangyu/a2a/: bus.py  registry.py  transport_http.py
fangyu/a2a/trust/: anchor.py  registry.py
fangyu/core/: config.py
fangyu/engine/: __init__.py  exec_core.py  exec_data.py  executor.py  mcp.py  sandbox.py  tool_registry.py  variable.py
fangyu/frontend/: agentTrust.ts  executor.ts  flowHelper.ts  localExecutor.ts  nodeRegistry.ts
(+589 files in other folders)
