[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fangyu"
version = "0.1.0"
description = "AI society infrastructure — visual orchestration, DAG engine, A2A protocol, and ATP trust layer"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=41.0.0",
    "fastapi>=0.115.0",
    "httpx>=0.25.0",
    "pydantic>=2.10.0",
    "sqlalchemy>=2.0.36",
    "greenlet>=3.0.0",
    "aiosqlite>=0.20.0",
    "python-multipart>=0.0.17",
    "python-dotenv>=1.0.1",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = ["pyinstaller>=6.0.0", "pytest>=8.0.0", "pytest-asyncio>=0.24.0"]
mqtt = ["paho-mqtt>=2.0.0"]
# 语义向量检索（体积大，可选；未安装时回退 n-gram）
vector = ["sentence-transformers>=2.2.0"]
# 更丰富的 Word 排版（未装时用内置简易 OOXML 写 docx）
office = ["python-docx>=1.1.0"]
# 真实浏览器 Computer-use（未装时用 static HTML 引擎）
browser = ["playwright>=1.40.0"]

[project.scripts]
fangyu = "fangyu.__main__:main"

[tool.setuptools]
package-dir = {"fangyu" = "."}
packages = [
    "fangyu",
    "fangyu.a2a",
    "fangyu.a2a.trust",
    "fangyu.core",
    "fangyu.engine",
    "fangyu.engine.vectorstore",
    "fangyu.models",
    "fangyu.routers",
    "fangyu.adapters",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
