[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "fangyu"
version = "0.1.0"
description = "AI Flow Canvas Engine — standalone DAG executor with A2A/ATP protocol"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=41.0.0",
    "httpx>=0.25.0",
    "sentence-transformers>=2.2.0",
]

[project.scripts]
fangyu = "fangyu.__main__:main"
